--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
 
-	<body>
-	
 		<style>
 		
-		main {
-			background-color: grey;
+		body {
+			background-color: black;
+		}
+		
+		.maintext{
+			text-align: center;
+			font-family: arial;
+			color: white;
 		}
 		
 		</style>
 
-		<h1>Welcome!</h1><br>
+	<body>
+	
+		<h1 class="maintext" style="font-size:500%;">Welcome to SMOEDOTS.github.io!</h1>
+		<h2 class="maintext" style="font-size:300%;">This page is currently under development.</h2>
+		<br>
+		<br>
+		<p class="maintext" style="font-size:50%;">Sorry for the (possible) inconvenience.<p>
+
 	</body>
 
 </html>
