--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 	<body>
 	
+		<img src="Calamariki Ken.png" alt="my profile image"  style="width:300px;height:300px;display:block;margin-left:auto;
+    margin-right:auto;margin-top:25px;">
 		<h1 class="maintext" style="font-size:500%;">Welcome to SMOEDOTS.github.io!</h1>
 		<h2 class="maintext" style="font-size:300%;">This page is currently under development.</h2>
 		<br>
