--- a/index.html
+++ b/index.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html>
-
-		<style>
 		
-		body {
-			background-color: black;
-		}
-		
-		.maintext{
-			text-align: center;
-			font-family: arial;
-			color: white;
-		}
-		
-		</style>
+	<link rel="stylesheet" href="style.css">
 
 	<body>
 	
@@ -29,6 +17,11 @@
 		<br>
 		<br>
 		<br>
+		
+		<center>
+			<a href="bored.html" class="maintext" style="font-size:70%;">Bored? Click here!</a>
+		</center>
+		
 		<br>
 		<br>
 		<br>
