--- a/bored.html
+++ b/bored.html
@@ -7,7 +7,13 @@
 	
 		<p class="maintext" style="font-size:800%">Hello world!</p>
 		<br>
-		<p class="maintext" style="font-size:200%">Projects coming soon.</p>
+		
+		<center>
+		<a href="click-bait/click-bait.html" class="maintext">Clicky Clicky</a>
+		</center>
+		
+		<br>
+		<p class="maintext" style="font-size:200%">More projects coming soon.</p>
 		<br>
 		<br>
 		
