Icons! (+clickbait btn fix)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 		
 	<link rel="stylesheet" href="style.css">
 
+	<head>
+	
+		<link rel="icon" type="image/png" href="http://smoedots.github.io/favicon.png">
+	
+	</head>
+	
 	<body>
 	
 		<img src="Calamariki Ken.png" alt="my profile image"  style="width:300px;height:300px;display:block;margin-left:auto;
