--- a/Click-Bait/Click-Bait.html
+++ b/Click-Bait/Click-Bait.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 
+	<head>
+	
+		<link rel="icon" type="image/png" href="click-bait.png">
+	
+	</head>
+
 	<body>
 	
 	<link rel="stylesheet" href="style.css">
@@ -12,7 +18,7 @@
 	<!-->Main button</!-->
 	
 	<center>
-	<input type="image" src="thisisbait.png" id="mainButton" style="height:200px;width:200px;" onclick="baited()"></button>
+	<input type="image" src="thisisbait.png" id="mainButton" style="height:200px;width:200px;" onclick="baited()" class="btn"></button>
 	
 	<!-->Put bait2 here</!-->
 	
