--- a/bored.html
+++ b/bored.html
@@ -3,6 +3,12 @@
 	
 	<link rel="stylesheet" href="style.css">
 	
+	<head>
+	
+		<link rel="icon" type="image/png" href="http://smoedots.github.io/favicon.png">
+	
+	</head>	
+	
 	<body>
 	
 		<p class="maintext" style="font-size:800%">Hello world!</p>
