--- a/bored.html
+++ b/bored.html
@@ -15,7 +15,7 @@
 		<br>
 		
 		<center>
-		<a href="click-bait/click-bait.html" class="maintext">Clicky Clicky</a>
+		<a href="Click-Bait/Click-Bait.html" class="maintext">Clicky Clicky</a>
 		</center>
 		
 		<br>
