--- a/Click-Bait/Click-Bait.html
+++ b/Click-Bait/Click-Bait.html
@@ -15,7 +15,7 @@
 	<h1 id="topText" class="maintext" style="font-size:500%"></h1>
 	
 	
-	<!-->Main button</!-->
+	<!-->Secret 3 is e</!-->
 	
 	<center>
 	<input type="image" src="thisisbait.png" id="mainButton" style="height:200px;width:200px;" onclick="baited()" class="btn"></button>
