--- a/index.html
+++ b/index.html
@@ -4,22 +4,29 @@
 	<link rel="stylesheet" href="style.css">
 
 	<head>
-	
+		
+
 		<link rel="icon" type="image/png" href="http://smoedots.github.io/favicon.png">
+
 	
 	</head>
 	
 	<body>
-	
-		<img src="Calamariki Ken.png" alt="my profile image"  style="width:300px;height:300px;display:block;margin-left:auto;
-    margin-right:auto;margin-top:25px;">
+		
+		<a href="PasswordTime.html">
+			<img src="Calamariki Ken.png" alt="my profile image"  style="width:300px;height:300px;display:block;margin-left:auto; margin-right:auto;margin-top:25px;">
+		</a>
+			
 		<h1 class="maintext" style="font-size:500%;">Welcome to SMOEDOTS.github.io!</h1>
-		<h2 class="maintext" style="font-size:300%;">This page is currently under development.</h2>
+		<h2 class="maintext" style="font-size:300%;">OwO -> UwU -> XwX</h2>
+		<h3 class="maintext" style="font-size:200%;">Can you find the secrets?</h3>
+		<center>
+			<a href="GitGud.html" class="maintext" style="font-size:100%;">Wanna Git Gud?</a>
+		</center>
 		<br>
-		<br>
-		<p class="maintext" style="font-size:50%;">Sorry for the (possible) inconvenience.<p>
-		<br>
-		<br>
+		<center>
+			<a href="Running.html" class="maintext" style="font-size:300%;">Are you fast enough?</a>
+		</center>
 		<br>
 		<br>
 		<br>
@@ -32,8 +39,6 @@
 		<br>
 		<br>
 		<br>
-		<p class="maintext" style="font-size:200%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
 	</body>
 
 </html>
