--- a/bored.html
+++ b/bored.html
@@ -11,9 +11,16 @@
 	
 	<body>
 	
-		<p class="maintext" style="font-size:800%">Hello world!</p>
+		<p class="maintext" style="font-size:800%">Good Job!</p>
 		<br>
 		
+		<video class="center" autoplay>
+			<source src="NGGYU.mp4" type="video/mp4">
+		</video>
+		
+		<br>
+		<br>
+		<br>
 		<center>
 		<a href="Click-Bait/Click-Bait.html" class="maintext">Clicky Clicky</a>
 		</center>
