--- a/Running.html
+++ b/Running.html
@@ -13,7 +13,7 @@
 	
 		<p class="maintext" style="font-size:800%">We'll see about that</p>
 		
-		<a href="Secret2.html">
+		<a href="secret2.html">
 			<img src="Stepitup.png" alt="SANIC"  style="width:600px;height:600px;display:block;margin-left:auto; margin-right:auto;margin-top:25px;">
 		</a>
 		
