Moving & Secret finish

--- a/GitGud.html
+++ b/GitGud.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="Secret/style.css">
 	
 	<head>
 	
@@ -15,7 +15,7 @@
 		<br>
 		
 		<video class="center" autoplay>
-			<source src="D.VaHappy.mp4" type="video/mp4">
+			<source src="Media/D.VaHappy.mp4" type="video/mp4">
 		</video>
 		
 		<br>
