--- a/bored.html
+++ b/bored.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="Secret/style.css">
 	
 	<head>
 	
@@ -11,26 +11,21 @@
 	
 	<body>
 	
-		<p class="maintext" style="font-size:800%">Good Job!</p>
+		<p class="maintext" style="font-size:600%">Well, technically nah</p>
 		<br>
 		
 		<video class="center" autoplay>
-			<source src="NGGYU.mp4" type="video/mp4">
+			<source src="Media/NGGYU.mp4" type="video/mp4">
 		</video>
 		
 		<br>
 		<br>
 		<br>
-		<center>
-		<a href="Click-Bait/Click-Bait.html" class="maintext">Clicky Clicky</a>
-		</center>
-		
-		<br>
-		<p class="maintext" style="font-size:200%">More projects coming soon.</p>
-		<br>
-		<br>
 		
 		<center>
+			<a href="Secret/aesthetic.html" class="maintext">But seriously tho</a>
+			<br>
+			<br>
 			<a href="index.html" class="maintext">Go Back</a> 
 		</center>
 	
