--- a/Running.html
+++ b/Running.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="Secret/style.css">
 	
 	<head>
 	
@@ -13,12 +13,12 @@
 	
 		<p class="maintext" style="font-size:800%">We'll see about that</p>
 		
-		<a href="secret2.html">
-			<img src="Stepitup.png" alt="SANIC"  style="width:600px;height:600px;display:block;margin-left:auto; margin-right:auto;margin-top:25px;">
+		<a href="Secret/secret2.html">
+			<img src="Media/Stepitup.png" alt="SANIC"  style="width:600px;height:600px;display:block;margin-left:auto; margin-right:auto;margin-top:25px;">
 		</a>
 		
 		<video class="center" height="600" width="400" autoplay>
-			<source src="Run90.mp4" type="video/mp4">
+			<source src="Media/Run90.mp4" type="video/mp4">
 		</video>
 		
 		<br>
