--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 		
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="Secret/style.css">
 
 	<head>
 		
@@ -13,8 +13,8 @@
 	
 	<body>
 		
-		<a href="PasswordTime.html">
-			<img src="Calamariki Ken.png" alt="my profile image"  style="width:300px;height:300px;display:block;margin-left:auto; margin-right:auto;margin-top:25px;">
+		<a href="Secret/PasswordTime.html">
+			<img src="Media/Calamariki Ken.png" alt="my profile image"  style="width:300px;height:300px;display:block;margin-left:auto; margin-right:auto;margin-top:25px;">
 		</a>
 			
 		<h1 class="maintext" style="font-size:500%;">Welcome to SMOEDOTS.github.io!</h1>
@@ -32,10 +32,17 @@
 		<br>
 		
 		<center>
-			<a href="bored.html" class="maintext" style="font-size:70%;">Bored? Click here!</a>
+			<a href="bored.html" class="maintext" style="font-size:70%;">Hints to find secrets here.</a>
 		</center>
 		
 		<br>
+		<br>
+		<center>
+		<a href="Click-Bait/Click-Bait.html" class="maintext">Clicky Clicky</a>
+		</center>
+		
+		<br>
+		<p class="maintext" style="font-size:200%">More projects coming soon.</p>
 		<br>
 		<br>
 		<br>
