--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 		</a>
 			
 		<h1 class="maintext" style="font-size:500%;">Welcome to SMOEDOTS.github.io!</h1>
-		<h2 class="maintext" style="font-size:300%;">--MESS WITH THE BEST--</h2>
-		<h2 class="maintext" style="font-size:300%;">--DIE LIKE THE REST--</h2>
 		<h3 class="maintext" style="font-size:200%;">Can you find the secrets?</h3>
 		<center>
 			<a href="GitGud.html" class="maintext" style="font-size:100%;">Wanna Git Gud?</a>
+			<a href="DODGE/index.html" class="maintext">DODGE</a>
 		</center>
 		<br>
 		<center>
