omae wa mou shinderu
removed secrets added games and some improvements

--- a/index.html
+++ b/index.html
@@ -13,34 +13,42 @@
 	
 	<body>
 		
-		<a href="Secret/PasswordTime.html">
-			<img src="Media/Calamariki Ken.png" alt="my profile image"  style="width:300px;height:300px;display:block;margin-left:auto; margin-right:auto;margin-top:25px;">
-		</a>
+		<img src="Media/arise.png" alt="my profile image"  style="width:332px;height:265px;display:block;margin-left:auto; margin-right:auto;margin-top:25px;">
 			
 		<h1 class="maintext" style="font-size:500%;">Welcome to SMOEDOTS.github.io!</h1>
-		<h3 class="maintext" style="font-size:200%;">Can you find the secrets?</h3>
-		<center>
-			<a href="GitGud.html" class="maintext" style="font-size:100%;">Wanna Git Gud?</a>
-			<a href="DODGE/index.html" class="maintext">DODGE</a>
+		<center class="maintext">
+			<br>
+			<br>
+			<br> 
+			<h1 style="font-size:300%;">MAIN GAME:</h1>
+			<br>
+			<a href="CoolAndGood/index.html" class="maintext" style="font-size:600%;">Cool And Good</a>
+			<br>
+			<h3>work in progress</h3>
+			<h5>dank</h5>
+			<br>
+			<br>
+			<br>
+			<h4>some other game I made</h4>
+			<h6>pretty complete</h6>
+			<a href="DODGE/index.html" class="maintext">D O D G E</a>
+			<h6>controls: z-x-c for bullets, arrow keys to move</h6>
 		</center>
 		<br>
+		<br>
 		<center>
-			<a href="Running.html" class="maintext" style="font-size:300%;">Are you fast enough?</a>
+			<a href="Running.html" class="maintext" style="font-size:150%;">Are you fast enough?</a>
 		</center>
 		<br>
 		<br>
 		<br>
 		
 		<center>
-			<a href="bored.html" class="maintext" style="font-size:70%;">Hints to find secrets here.</a>
+			<a href="bored.html" class="maintext" style="font-size:70%;">Secret here.</a>
 		</center>
 		
 		<br>
 		<br>
-		<center>
-		<a href="Click-Bait/Click-Bait.html" class="maintext">Clicky Clicky</a>
-		</center>
-		
 		<br>
 		<p class="maintext" style="font-size:200%">More projects coming soon.</p>
 		<br>
