--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
 		<center>
 			<a href="bored.html" class="maintext" style="font-size:70%;">Secret here.</a>
 		</center>
-		
+		<br>
+		<h3 class="maintext" style="margin-bottom:5px">free stuff</h3>
+		<a href="http://www.swagbucks.com/p/register?rb=41897321">
+			<img src="Media/swagbucks-share-2333.png" alt="gimme money" style="width:600px;height:300px;display:block;margin-left:auto; margin-right:auto;margin-top:5px;">
+			
+		</a>
 		<br>
 		<br>
 		<br>
@@ -54,6 +59,7 @@
 		<br>
 		<br>
 		<br>
+		
 	</body>
 
 </html>
