--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<br>
 			<a href="CoolAndGood/index.html" class="maintext" style="font-size:600%;">Cool And Good</a>
 			<br>
-			<h3>work in progress</h3>
+			<h3>work in progress - last updated 4/3/2018</h3>
 			<h5>dank</h5>
 			<br>
 			<br>
@@ -42,15 +42,7 @@
 		<br>
 		<br>
 		<br>
-		
-		<center>
-			<a href="bored.html" class="maintext" style="font-size:70%;">Secret here.</a>
-		</center>
 		<br>
-		<h3 class="maintext" style="margin-bottom:5px">free stuff</h3>
-		<a href="http://www.swagbucks.com/p/register?rb=41897321">
-			<img src="Media/swagbucks-share-2333.png" alt="gimme money" style="width:600px;height:300px;display:block;margin-left:auto; margin-right:auto;margin-top:5px;">
-			
 		</a>
 		<br>
 		<br>
