--- a/ggez.html
+++ b/ggez.html
@@ -2,7 +2,7 @@
 <html>
 	
 	<link rel="stylesheet" href="Secret/style.css">
-	
+	<title>bokbok</title>
 	<head>
 	
 		<link rel="icon" type="image/png" href="http://smoedots.github.io/favicon.png">
@@ -12,21 +12,15 @@
 	
 	<body>
 	
-		<p class="maintext" style="font-size:500%">You've come this far.</p>
+		<p class="maintext" style="font-size:500%">Bok Bok</p>
 		
 		<br>
 		<br>
 		<video class="center" style="width:800px" autoplay>
-			<source src="Media/heyyey.mp4" type="video/mp4">
+			<source src="Media/bokbok.mp4" type="video/mp4">
 		</video>
 		<br>
 		
-		<p class="maintext" style="font-size:100%; margin:auto;">
-		Btx cexz dkylh siht qafpbq. H bo fkrqzyydl, gyu uda eblz ht oky tedt. wky kwtp lddcsczq tnlz tqgdhbk dlib D nhed icmmal dqqaxfzqd. Lk oty ymxxw, imt sid qhoo ct no sda inlzsgez.
-		</p>
-		
-		<br>
-		<h4 class="maintext">hint: playfair</h4>
 		<br>
 		<br>
 		
