--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 		
 	<link rel="stylesheet" href="Secret/style.css">
 
+	<title>smoedots</title>
+	
 	<head>
 		
 
@@ -24,8 +26,9 @@
 			<br>
 			<a href="CoolAndGood/index.html" class="maintext" style="font-size:600%;">Cool And Good</a>
 			<br>
-			<h3>work in progress - last updated 4/3/2018</h3>
+			<h3>work in progress - last updated 4/4/2018</h3>
 			<h5>dank</h5>
+			<h4>check daily for updates</h4>
 			<br>
 			<br>
 			<br>
@@ -33,10 +36,12 @@
 			<h6>pretty complete</h6>
 			<a href="DODGE/index.html" class="maintext">D O D G E</a>
 			<h6>controls: z-x-c for bullets, arrow keys to move</h6>
+			<br>
+		<br>
+		<br>
+		<a href="ggez.html" class="maintext">bokbok?</a>
 		</center>
-		<br>
-		<br>
-		<br>
+		
 		<br>
 		<br>
 		<br>
