--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 			
 		<h1 class="maintext" style="font-size:500%;">Welcome to SMOEDOTS.github.io!</h1>
 		<center class="maintext">
+			<h5>site last updated 4/4/2018</h5>
 			<br>
 			<br>
 			<br> 
-			<h1 style="font-size:300%;">MAIN GAME:</h1>
-			<br>
+			<h3>i like my bepis&#38;icce</h3>
 			<a href="CoolAndGood/index.html" class="maintext" style="font-size:600%;">Cool And Good</a>
 			<br>
 			<h3>work in progress - last updated 4/4/2018</h3>
