--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 			
 		<h1 class="maintext" style="font-size:500%;">Welcome to SMOEDOTS.github.io!</h1>
 		<center class="maintext">
-			<h5>site last updated 4/4/2018</h5>
+			<h5>site last updated 4/5/2018</h5>
 			<br>
 			<br>
 			<br> 
 			<h3>i like my bepis&#38;icce</h3>
 			<a href="CoolAndGood/index.html" class="maintext" style="font-size:600%;">Cool And Good</a>
 			<br>
-			<h3>work in progress - last updated 4/4/2018</h3>
+			<br>
 			<h5>dank</h5>
 			<h4>check daily for updates</h4>
 			<br>
@@ -36,10 +36,14 @@
 			<h6>pretty complete</h6>
 			<a href="DODGE/index.html" class="maintext">D O D G E</a>
 			<h6>controls: z-x-c for bullets, arrow keys to move</h6>
+			<h6>updated 4/4/2018</h6>
 			<br>
 		<br>
 		<br>
 		<a href="ggez.html" class="maintext">bokbok?</a>
+		<br>
+		<br>
+		<a href="ggez.html" class="maintext">steppin</a>
 		</center>
 		
 		<br>
