--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<a href="ggez.html" class="maintext">bokbok?</a>
 		<br>
 		<br>
-		<a href="ggez.html" class="maintext">steppin</a>
+		<a href="stepp.html" class="maintext">steppin</a>
 		</center>
 		
 		<br>
@@ -54,6 +54,9 @@
 		<br>
 		<br>
 		
+		
+		 <a href='http://www.freevisitorcounters.com'>Free Visitor Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=78810673ff38bb4d434496ce3365d669481be5d2'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/354835/t/0"></script>
 	</body>
 
 </html>
