--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<br>
 			<h5>dank</h5>
 			<h4>check daily for updates</h4>
+			<h6>updated 4/5/2018 - ver 0.1.2</h6>
 			<br>
 			<br>
 			<br>
