--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 		<br>
 		<br>
 		
-		
+		<center>
 		 <a href='http://www.freevisitorcounters.com'>Free Visitor Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=78810673ff38bb4d434496ce3365d669481be5d2'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/354835/t/0"></script>
+		<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/354835/t/0"></script>
+		</center>
 	</body>
 
 </html>
