--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			
 		<h1 class="maintext" style="font-size:500%;">Welcome to SMOEDOTS.github.io!</h1>
 		<center class="maintext">
-			<h5>site last updated 4/5/2018</h5>
+			<h5>site last updated 4/7/2018</h5>
 			<br>
 			<br>
 			<br> 
@@ -29,7 +29,8 @@
 			<br>
 			<h5>dank</h5>
 			<h4>check daily for updates</h4>
-			<h6>updated 4/5/2018 - ver 0.1.2</h6>
+			<h6>updated 4/7/2018 - ver 0.2.0</h6>
+			<h6>if you're too lazy, press p to skip level/scene</h6>
 			<br>
 			<br>
 			<br>
