--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 			<br>
 			<h5>dank</h5>
 			<h4>check daily for updates</h4>
-			<h6>updated 4/12/2018 - ver 0.2.0</h6>
+			<h6>updated 4/12/2018 - ver 0.2.1</h6>
 			<h6>if you're too lazy, press p to skip level/scene</h6>
+			<h6 style="font-size:50%">Changes in 0.2.1: Fixed Loading Bug - Added sharks</h6>
 			<br>
 			<br>
 			<br>
@@ -61,6 +62,10 @@
 		<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/354835/t/0"></script>
 		</center>
 	</body>
+	
+	
+	
+	
 
 </html>
 
