--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			
 		<h1 class="maintext" style="font-size:500%;">Welcome to SMOEDOTS.github.io!</h1>
 		<center class="maintext">
-			<h5>site last updated 4/7/2018</h5>
+			<h5>site last updated 5/9/2018</h5>
 			<br>
 			<br>
 			<br> 
@@ -27,11 +27,11 @@
 			<a href="CoolAndGood/index.html" class="maintext" style="font-size:600%;">Cool And Good</a>
 			<br>
 			<br>
-			<h5>dank</h5>
+			<h5>surreal</h5>
 			<h4>check daily for updates</h4>
-			<h6>updated 4/12/2018 - ver 0.2.1</h6>
+			<h6>updated 5/9/2018 - ver 0.2.1</h6>
 			<h6>if you're too lazy, press p to skip level/scene</h6>
-			<h6 style="font-size:50%">Changes in 0.2.1: Fixed Loading Bug - Added sharks</h6>
+			<h6 style="font-size:50%">Changes in 0.2.2: Changed Shark Timer</h6>
 			<br>
 			<br>
 			<br>
