--- a/index.html
+++ b/index.html
@@ -1,66 +1,46 @@
 <!DOCTYPE html>
 <html>
 		
-	<link rel="stylesheet" href="Secret/style.css">
+	<link rel="stylesheet" href="style.css">
 
 	<title>smoedots</title>
 	
 	<head>
-		
-
 		<link rel="icon" type="image/png" href="http://smoedots.github.io/favicon.png">
-
-	
 	</head>
 	
 	<body>
 		
 		<img src="Media/arise.png" alt="my profile image"  style="width:332px;height:265px;display:block;margin-left:auto; margin-right:auto;margin-top:25px;">
 			
-		<h1 class="maintext" style="font-size:500%;">Welcome to SMOEDOTS.github.io!</h1>
-		<center class="maintext">
-			<h5>site last updated 5/9/2018</h5>
-			<br>
-			<br>
-			<br> 
-			<h3>i like my bepis&#38;icce</h3>
-			<a href="CoolAndGood/index.html" class="maintext" style="font-size:600%;">Cool And Good</a>
-			<br>
-			<br>
-			<h5>surreal</h5>
-			<h4>check daily for updates</h4>
-			<h6>updated 5/9/2018 - ver 0.2.1</h6>
-			<h6>if you're too lazy, press p to skip level/scene</h6>
-			<h6 style="font-size:50%">Changes in 0.2.2: Changed Shark Timer</h6>
-			<br>
-			<br>
-			<br>
-			<h4>some other game I made</h4>
-			<h6>pretty complete</h6>
-			<a href="DODGE/index.html" class="maintext">D O D G E</a>
-			<h6>controls: z-x-c for bullets, arrow keys to move</h6>
-			<h6>updated 4/4/2018</h6>
-			<br>
-		<br>
-		<br>
-		<a href="ggez.html" class="maintext">bokbok?</a>
-		<br>
-		<br>
-		<a href="stepp.html" class="maintext">steppin</a>
-		</center>
-		
-		<br>
-		<br>
-		<br>
-		<p class="maintext" style="font-size:200%">More projects coming soon.</p>
-		<br>
-		<br>
+		<h1 style="font-size:500%; line-height:20%">smoe</h1>
+		<h5>site last updated 12/18/2018</h5>
 		<br>
 		
-		<center>
-		 <a href='http://www.freevisitorcounters.com'>Free Visitor Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=78810673ff38bb4d434496ce3365d669481be5d2'></script>
-		<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/354835/t/0"></script>
-		</center>
+		<div style="border: 2px solid white; width:20%; margin:0 auto;">
+			<h3 style="line-height:20%">dank webcomics</h3>
+			<a href="comics/OTAC/OTAC.html">Of Taxes and Crabs</a> <br>
+			<a href="comics/WotK/WotK.html">War of the Kraft</a> <br>
+			<a href="comics/CSD/CSD.html">Consider: Supreme Duck</a> <br>
+			<a href="comics/TEoY/TEoY.html">The Evasion of Yosh (in progress)</a>
+			<br>
+			<br>
+		</div>
+		
+		<br>
+		<br> 
+		<a href="CoolAndGood/index.html" style="font-size:200%;">Cool And Good</a>
+		<h6>updated 5/9/2018 - ver 0.2.1</h6>
+		<h6 style="font-size:50%">Changes in 0.2.2: Changed Shark Timer</h6>
+		<br>
+		<br>
+		<a href="DODGE/index.html">D O D G E</a>
+		<h6>controls: z-x-c for bullets, arrow keys to move</h6>
+		<h6>updated 4/4/2018</h6>
+		<p style="font-size:200%">More projects coming soon.</p>
+		<br>
+		<br>
+		<br>
 	</body>
 	
 	
