--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 		
 		<div style="border: 2px solid white; width:20%; margin:0 auto;">
 			<h3 style="line-height:20%">dank webcomics</h3>
-			<a href="comics/OTAC/OTAC.html">Of Taxes and Crabs</a> <br>
-			<a href="comics/WotK/WotK.html">War of the Kraft</a> <br>
-			<a href="comics/CSD/CSD.html">Consider: Supreme Duck</a> <br>
-			<a href="comics/TEoY/TEoY.html">The Evasion of Yosh (in progress)</a>
+			<a href="Comics/OTAC/OTAC.html">Of Taxes and Crabs</a> <br>
+			<a href="Comics/WotK/WotK.html">War of the Kraft</a> <br>
+			<a href="Comics/CSD/CSD.html">Consider: Supreme Duck</a> <br>
+			<a href="Comics/TEoY/TEoY.html">The Evasion of Yosh (in progress)</a>
 			<br>
 			<br>
 		</div>
