--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
 			<a href="Comics/WotK/WotK.html">War of the Kraft</a> <br>
 			<a href="Comics/CSD/CSD.html">Consider: Supreme Duck</a> <br>
 			<a href="Comics/TEoY/TEoY.html">The Evasion of Yosh (in progress)</a>
-			<br>
-			<br>
+			<h6 style="line-height:20%">latest addition 12/18/18</h6>
 		</div>
 		
 		<br>
 		<br> 
-		<a href="CoolAndGood/index.html" style="font-size:200%;">Cool And Good</a>
-		<h6>updated 5/9/2018 - ver 0.2.1</h6>
-		<h6 style="font-size:50%">Changes in 0.2.2: Changed Shark Timer</h6>
-		<br>
-		<br>
-		<a href="DODGE/index.html">D O D G E</a>
-		<h6>controls: z-x-c for bullets, arrow keys to move</h6>
-		<h6>updated 4/4/2018</h6>
-		<p style="font-size:200%">More projects coming soon.</p>
-		<br>
-		<br>
-		<br>
+		
+		<div style="border: 2px solid white; width:20%; margin:0 auto;">
+			<h3 style="line-height:20%">other stuff</h3>
+			<a href="CoolAndGood/index.html" style="font-size:200%;">Cool And Good</a>
+			<h6>updated 5/9/2018 - ver 0.2.1</h6>
+			<h6 style="font-size:50%">Changes in 0.2.2: Changed Shark Timer</h6>
+			<br>
+			<br>
+			<a href="DODGE/index.html">D O D G E</a>
+			<h6>controls: z-x-c for bullets, arrow keys to move</h6>
+			<h6>updated 4/4/2018</h6>
+			<p style="font-size:200%">More projects coming soon.</p>
+		</div>
 	</body>
 	
 	
