--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>smoedots</title>
 	
 	<head>
-		<link rel="icon" type="image/png" href="http://smoedots.github.io/favicon.png">
+		<link rel="icon" type="image/png" href="favicon.png">
 	</head>
 	
 	<body>
