--- a/Comics/OTAC/OTAC.html
+++ b/Comics/OTAC/OTAC.html
@@ -10,7 +10,7 @@
 		margin-bottom: 60px;
 	}
 	</style>
-	<link rel="icon" type="image/png" href="http://smoedots.github.io/favicon.png">
+	<link rel="icon" type="image/png" href="../../favicon.png">
 	
 	<script>
 	var index = 1;
