--- a/Comics/viewer.html
+++ b/Comics/viewer.html
@@ -32,7 +32,7 @@
 		<br>
 		<br>
 		<div id="idImgDiv">
-			<img alt="comic" src="tbc.png" width="900">
+			<img alt="comic" width="900">
 		</div>
 		<br>
 		<br>
