--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<body>
 		
-		<img src="Media/arise.png" alt="my profile image"  style="width:332px;height:265px;display:block;margin-left:auto; margin-right:auto;margin-top:25px;">
+		<img src="Media/arise.png" alt="my profile image" width="200px" style="display:block;margin-left:auto; margin-right:auto;margin-top:25px;">
 			
 		<h1 style="font-size:500%; line-height:20%">smoe</h1>
 		<h5>site last updated 1/9/19</h5>
