--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			<a href="Comics/viewer.html?series=0&num=1">Of Taxes and Crabs</a> <br>
 			<a href="Comics/viewer.html?series=1&num=1">War of the Kraft</a> <br>
 			<a href="Comics/viewer.html?series=2&num=1">Consider: Supreme Duck</a> <br>
-			<a href="Comics/viewer.html?series=3&num=1">The Evasion of Yosh (in progress)</a> <br>
-			<a href="Comics/viewer.html?series=4&num=1">The Year of the Lemon (in progress)</a>
-			<h6 style="line-height:20%">latest addition 1/22/19</h6>
+			<a href="Comics/viewer.html?series=3&num=1">The Evasion of Yosh (unfinished)</a> <br>
+			<a href="Comics/viewer.html?series=4&num=1">The Year of the Lemon (currently in progress)</a>
+			<h6 style="line-height:20%">latest addition 2/6/19</h6>
 		</div>
 		
 		<br>
